crates/python_parser/tests/snapshots/invalid_syntax@simple_stmts_on_same_line_in_block.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/simple_stmts_on_same_line_in_block.py
---
## AST

```
Module(
    ModModule {
        range: 0..46,
        body: [
            If(
                IfStmt {
                    range: 0..45,
                    test: BooleanLiteral(
                        BooleanLiteralExpr {
                            range: 3..7,
                            value: true,
                        },
                    ),
                    body: [
                        Break(
                            BreakStmt {
                                range: 9..14,
                            },
                        ),
                        Continue(
                            ContinueStmt {
                                range: 16..24,
                            },
                        ),
                        Pass(
                            PassStmt {
                                range: 25..29,
                            },
                        ),
                        Continue(
                            ContinueStmt {
                                range: 31..39,
                            },
                        ),
                        Break(
                            BreakStmt {
                                range: 40..45,
                            },
                        ),
                    ],
                    elif_else_clauses: [],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | if True: break; continue pass; continue break
  |                          ^^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |


  |
1 | if True: break; continue pass; continue break
  |                                         ^^^^^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |
